BCKND-1: update swag docs
